# oficialia-dsa

./: .gitignore  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/commands/: create_document.rs  delete_document.rs  mod.rs  process_ocr.rs  scan_document.rs  update_document.rs
src-tauri/src/application/dto/: mod.rs
src-tauri/src/application/ports/: mod.rs
src-tauri/src/application/queries/: get_document.rs  list_documents.rs  mod.rs  search_documents.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/core/: error.rs  gemini_client.rs  mod.rs  ocr.rs  pdf_builder.rs  scanner.rs
src-tauri/src/db/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/entities/: document.rs  mod.rs  ocr_result.rs  scan_result.rs
src-tauri/src/domain/repositories/: mod.rs
src-tauri/src/domain/services/: ai_service.rs  document_service.rs  mod.rs  ocr_service.rs  scanner_service.rs
src-tauri/src/domain/value_objects/: document_status.rs  file_path.rs  mod.rs
src-tauri/src/infrastructure/: error.rs  mod.rs
src-tauri/src/infrastructure/api_clients/: gemini_client.rs  mod.rs
src-tauri/src/infrastructure/database/: mod.rs
src-tauri/src/infrastructure/file_system/: mod.rs
src-tauri/src/infrastructure/tauri_handlers/: mod.rs
src-tauri/src/models/: mod.rs
src/app/config/: index.ts
src/app/providers/: AppProvider.tsx
src/app/routes/: index.tsx
