[package]
name = "oficialia-dsa"
version = "0.1.0"
description = "Sistema de Gestión Documental con OCR e IA - WIA/TWAIN, Windows Media OCR, Gemini AI"
authors = ["Senior Developer"]
edition = "2021"

[lib]
name = "oficialia_dsa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 Core
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime & Concurrency (Tokio)
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# HTTP Client & API Communication (Reqwest + Multipart for Gemini)
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# PDF Generation & Image Processing
lopdf = "0.34"
image = "0.25"

# Database (SQLite with compile-time validation via SQLx)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
tempfile = "3.14"

# Windows Native APIs (Hardware & OCR)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_Graphics_Imaging",
    "Media_Ocr",
    "Win32_System_WindowsProgramming",
]}

[dev-dependencies]
mockall = "0.13"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
